@@ -5,6 +5,9 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/05/31
+- TestEngine: Added ctx->ItemIsChecked() and ctx->ItemIsOpened() helpers.
+
 2023/05/30:
 - TestEngine: Attempt to resize host window when aiming at a clipped item within menu layer.
   (which is non-scrolling).
